updated languages and updated contact information

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                                 <i class="fa fa-cloud fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>GitHub</strong>
+                                    <strong>AJAX</strong>
                                 </h4>
                                 
                             </div>
@@ -304,10 +304,7 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h4><strong>Katherine Rinas</strong>
                     </h4>
-                    <p>1515 Cook St
-                        <br>Denver, CO 80206</p>
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-phone fa-fw"></i> (816) 806-4727</li>
                         <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:katierinas@me.com">katierinas@me.com</a>
                         </li>
                     </ul>
