--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2></h2>
-                    <p class="lead">I have an undergraduate degree from the University of Kansas. My background is in Medical Laboratory Science. Although I loved the lab, I wanted to expand my skillset a field that allows creative freedom. I enjoy photography, sailing, tennis, skiing, hiking, piano, guitar, and camping.</a></p>
+                    <p class="lead">I have an undergraduate degree from the University of Kansas. My background is in Medical Laboratory Science. Although I loved the lab, I wanted to expand my skillset in a field with more creative freedom. I enjoy photography, sailing, tennis, skiing, hiking, piano, guitar, and camping.</a></p>
                 </div>
             </div>
             <!-- /.row -->
