added giphypop project to portfolio section

--- a/index.html
+++ b/index.html
@@ -289,8 +289,14 @@
 
                                 </a>
                             </div>
+                            <div class="col-md-6">
+                            <div class="portfolio-item">
+                                <a href="https://katherinerinas.github.io/GiphyPop/">
+                                    <img class="img-portfolio img-responsive" src="img/giphypop.png">
+                                </a>
+                            </div>
                         </div>
-                    </div>
+                    
                     <!-- /.row (nested) -->
                     <a href="https://github.com/katherinerinas" class="btn btn-dark">View More on Github</a>
                 </div>
