needed to add missing div for traintracks picture in portfolio section

--- a/index.html
+++ b/index.html
@@ -282,11 +282,11 @@
                                     <img class="img-portfolio img-responsive" src="img/traintracks.png">
                                 </a>
                             </div>
+                            </div>
                             <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="http://kinder.directory">
                                     <img class="img-portfolio img-responsive" src="img/kidlypic.png">
-
                                 </a>
                              </div>
                             </div>
