--- a/index.html
+++ b/index.html
@@ -297,6 +297,14 @@
                                 </a>
                             </div>
                            </div>
+
+                         <div class="col-md-6">
+                            <div class="portfolio-item">
+                                <a href="https://dateknightapp.herokuapp.com/">
+                                    <img class="img-portfolio img-responsive" src="img/dateKnight.png">
+                                </a>
+                            </div>
+                           </div>
                 </div>
             
                     <!-- /.row (nested) -->
