--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <header id="top" class="header">
         <div class="text-vertical-center">
             <h1>Katherine Rinas</h1>
-            <h3>Full Stack Web Developer</h3>
+            <h3>Full Stack Freelance Web Developer</h3>
             <br>
             <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
         </div>
