added obi wine kenobi to profile, finally

--- a/index.html
+++ b/index.html
@@ -305,6 +305,13 @@
                                 </a>
                             </div>
                            </div>
+                         <div class="col-md-6">
+                         <div class="portfolio-item">
+                                <a href="https://katherinerinas.github.io.obiwinekenobi/">
+                                    <img class="img-portfolio img-responsive" src="img/obk.png">
+                                </a>
+                            </div>
+                           </div>
                 </div>
             
                     <!-- /.row (nested) -->
