--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                            </div>
                          <div class="col-md-6">
                          <div class="portfolio-item">
-                                <a href="https://katherinerinas.github.io.obiwinekenobi/">
+                                <a href="https://katherinerinas.github.io/obiwinekenobi/">
                                     <img class="img-portfolio img-responsive" src="img/obk.png">
                                 </a>
                             </div>
