--- a/index.html
+++ b/index.html
@@ -38,9 +38,6 @@
                 <a href="#top" onclick=$("#menu-close").click();>Home</a>
             </li>
             <li>
-                <a href="#about" onclick=$("#menu-close").click();>About</a>
-            </li>
-            <li>
                 <a href="#services" onclick=$("#menu-close").click();>Languages</a>
             </li>
             <li>
@@ -56,14 +53,14 @@
     <header id="top" class="header">
         <div class="text-vertical-center">
             <h1>Katherine Rinas</h1>
-            <h3>Full Stack Freelance Web Developer</h3>
+            <h3>A Medical Laboratory Scientist pursuing a passion in web development</h3>
             <br>
-            <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
+            <a href="#portfolio" class="btn btn-dark btn-lg">My Projects</a>
         </div>
     </header>
 
     <!-- About -->
-    <section id="about" class="about">
+   <!-- <section id="about" class="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -71,10 +68,10 @@
                     <p class="lead">I have an undergraduate degree from the University of Kansas. My background is in Medical Laboratory Science. Although I loved the lab, I wanted to expand my skillset in a field with more creative freedom. I enjoy photography (the pictures on this page are my own), sailing, tennis, skiing, hiking, piano, guitar, and camping.</a></p>
                 </div>
             </div>
-            <!-- /.row -->
+           
         </div>
-        <!-- /.container -->
-    </section>
+        
+    </section> -->
 
     <!-- Services -->
     <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
