added a couople of projects

--- a/index.html
+++ b/index.html
@@ -309,6 +309,20 @@
                                 </a>
                             </div>
                            </div>
+                            <div class="col-md-6">
+                         <div class="portfolio-item">
+                                <a href="https://www.chroniclesofgnarnia.com/">
+                                    <img class="img-portfolio img-responsive" src="img/gnarnia.png">
+                                </a>
+                            </div>
+                           </div>
+                            <div class="col-md-6">
+                         <div class="portfolio-item">
+                                <a href="https://katherine741.wixsite.com/mysite">
+                                    <img class="img-portfolio img-responsive" src="img/storm.png">
+                                </a>
+                            </div>
+                           </div>
                 </div>
             
                     <!-- /.row (nested) -->
